--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         docker {
             image 'shivakumarchincholi/maven-sample-docker-agent:v2'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock --entrypoint=""'
+            args '--user root -v /var/run/docker.sock:/var/run/docker.sock -v $WORKSPACE:$WORKSPACE'
         }
     }
 
@@ -10,6 +10,8 @@ pipeline {
         SONAR_URL = "http://35.154.115.75:9000"
         GIT_USER_NAME = "Shivakumarchincholi"
         GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
+        WORKSPACE_DIR = "${WORKSPACE}/java-maven-sonar-argocd-helm-k8s/spring-boot-app"
+        DOCKER_IMAGE = "shivakumarchincholi/ultimate-cicd:${BUILD_NUMBER}"
     }
 
     stages {
@@ -21,10 +23,10 @@ pipeline {
 
         stage('Build and Test') {
             steps {
-                sh '''
-                    cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                sh """
+                    cd ${WORKSPACE_DIR}
                     mvn clean package
-                '''
+                """
             }
         }
 
@@ -32,23 +34,20 @@ pipeline {
             steps {
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
                     sh """
-                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-                        mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
+                        cd ${WORKSPACE_DIR}
+                        mvn sonar:sonar -Dsonar.login=\$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
                     """
                 }
             }
         }
 
         stage('Build and Push Docker Image') {
-            environment {
-                DOCKER_IMAGE = "shivakumarchincholi/ultimate-cicd:${BUILD_NUMBER}"
-            }
             steps {
+                sh """
+                    cd ${WORKSPACE_DIR}
+                    docker build -t ${DOCKER_IMAGE} .
+                """
                 script {
-                    sh """
-                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-                        docker build -t ${DOCKER_IMAGE} .
-                    """
                     def dockerImage = docker.image("${DOCKER_IMAGE}")
                     docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
                         dockerImage.push()
@@ -61,6 +60,7 @@ pipeline {
             steps {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     sh """
+                        cd $WORKSPACE
                         git config user.email "schincholi08@gmail.com"
                         git config user.name "Shivakumar"
                         BUILD_NUMBER=${BUILD_NUMBER}
