--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -7,7 +7,7 @@ pipeline {
     }
 
     environment {
-        SONAR_URL = "http://35.154.115.75:9000"
+        SONAR_URL     = "http://35.154.115.75:9000"
         GIT_USER_NAME = "Shivakumarchincholi"
         GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
     }
@@ -59,21 +59,27 @@ pipeline {
         }
 
         stage('Update Deployment File') {
-            agent any     // run this stage outside docker
+            agent any
             steps {
-                checkout scm  // clone repo again
+                deleteDir()
+                checkout scm
+
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                    dir('java-maven-sonar-argocd-helm-k8s') {
-                        sh '''
-                            git config user.email "schincholi08@gmail.com"
-                            git config user.name "Shivakumar"
-                            BUILD_NUMBER=${BUILD_NUMBER}
-                            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
-                            git add spring-boot-app-manifests/deployment.yml
-                            git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes to commit"
-                            git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                        '''
-                    }
+                    sh '''
+                        echo "Current directory:"
+                        pwd
+                        echo "Files:"
+                        ls -R .
+
+                        git config user.email "schincholi08@gmail.com"
+                        git config user.name "Shivakumar"
+
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
+
+                        git add spring-boot-app-manifests/deployment.yml
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
+                    '''
                 }
             }
         }
