--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,8 +1,9 @@
 pipeline {
     agent {
         docker {
-            image 'shivakumarchincholi/maven-sample-docker-agent:v2'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock --entrypoint=""'
+            // Use the fixed Docker image built from the corrected Dockerfile (CMD ["bash"])
+            image 'shivakumarchincholi/maven-sample-docker-agent:v3'
+            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
         }
     }
 
