--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,11 +1,5 @@
 pipeline {
-    agent {
-        docker {
-            // Use the fixed Docker image built from the corrected Dockerfile (CMD ["bash"])
-            image 'shivakumarchincholi/maven-sample-docker-agent:v3'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-        }
-    }
+    agent any
 
     environment {
         SONAR_URL     = "http://52.66.85.62:9000"
@@ -23,20 +17,32 @@ pipeline {
 
         stage('Build and Test') {
             steps {
-                sh '''
-                    cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-                    mvn clean package
-                '''
+                script {
+                    docker.image('shivakumarchincholi/maven-sample-docker-agent:v4').inside(
+                        '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+                    ) {
+                        sh '''
+                            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                            mvn clean package
+                        '''
+                    }
+                }
             }
         }
 
         stage('Static Code Analysis') {
             steps {
-                withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-                    sh """
-                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-                        mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
-                    """
+                script {
+                    docker.image('shivakumarchincholi/maven-sample-docker-agent:v4').inside(
+                        '--user root'
+                    ) {
+                        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+                            sh '''
+                                cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                                mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
+                            '''
+                        }
+                    }
                 }
             }
         }
@@ -47,13 +53,17 @@ pipeline {
             }
             steps {
                 script {
-                    sh """
-                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-                        docker build -t ${DOCKER_IMAGE} .
-                    """
-                    def dockerImage = docker.image("${DOCKER_IMAGE}")
-                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                        dockerImage.push()
+                    docker.image('shivakumarchincholi/maven-sample-docker-agent:v4').inside(
+                        '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+                    ) {
+                        sh '''
+                            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                            docker build -t ${DOCKER_IMAGE} .
+                        '''
+                        def dockerImage = docker.image("${DOCKER_IMAGE}")
+                        docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
+                            dockerImage.push()
+                        }
                     }
                 }
             }
@@ -64,14 +74,8 @@ pipeline {
             steps {
                 deleteDir()
                 checkout scm
-
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     sh '''
-                        echo "Current directory:"
-                        pwd
-                        echo "Files:"
-                        ls -R .
-
                         git config user.email "schincholi08@gmail.com"
                         git config user.name "Shivakumar"
 
@@ -86,4 +90,4 @@ pipeline {
         }
 
     } // stages
-} // pipeline
+}
