--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,93 +1,74 @@
 pipeline {
     agent any
 
-    environment {
-        SONAR_URL     = "http://52.66.85.62:9000"
-        GIT_USER_NAME = "Shivakumarchincholi"
-        GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
-    }
-
     stages {
 
-        stage('Checkout') {
-            steps {
-                checkout scm
-            }
-        }
-
         stage('Build and Test') {
-            steps {
-                script {
-                    docker.image('shivakumarchincholi/maven-sample-docker-agent:v6').inside(
-                        '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-                    ) {
-                        sh '''
-                            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-                            mvn clean package
-                        '''
-                    }
+            agent {
+                docker {
+                    image 'shivakumarchincholi/maven-sample-docker-agent:v5'
+                    args '-v /var/run/docker.sock:/var/run/docker.sock'
                 }
+            }
+            steps {
+                sh 'mvn clean package -DskipTests'
             }
         }
 
         stage('Static Code Analysis') {
-            steps {
-                script {
-                    docker.image('shivakumarchincholi/maven-sample-docker-agent:v6').inside(
-                        '--user root'
-                    ) {
-                        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-                            sh '''
-                                cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-                                mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
-                            '''
-                        }
-                    }
+            agent {
+                docker {
+                    image 'shivakumarchincholi/maven-sample-docker-agent:v5'
+                    args '-v /var/run/docker.sock:/var/run/docker.sock'
                 }
+            }
+            steps {
+                sh 'mvn sonar:sonar -Dsonar.projectKey=my-app'
             }
         }
 
-        stage('Build and Push Docker Image') {
-            environment {
-                DOCKER_IMAGE = "shivakumarchincholi/ultimate-cicd:${BUILD_NUMBER}"
+        stage('Build Docker Image') {
+            agent {
+                docker {
+                    image 'shivakumarchincholi/maven-sample-docker-agent:v5'
+                    args '-v /var/run/docker.sock:/var/run/docker.sock'
+                }
             }
             steps {
-                script {
-                    docker.image('shivakumarchincholi/maven-sample-docker-agent:v6').inside(
-                        '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-                    ) {
-                        sh '''
-                            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-                            docker build -t ${DOCKER_IMAGE} .
-                        '''
-                        def dockerImage = docker.image("${DOCKER_IMAGE}")
-                        docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                            dockerImage.push()
-                        }
-                    }
-                }
+                sh '''
+                    docker build -t shivakumarchincholi/spring-boot-app:${BUILD_NUMBER} .
+                    docker push shivakumarchincholi/spring-boot-app:${BUILD_NUMBER}
+                '''
             }
         }
 
         stage('Update Deployment File') {
-            agent any
-            steps {
-                deleteDir()
-                checkout scm
-                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                    sh '''
-                        git config user.email "schincholi08@gmail.com"
-                        git config user.name "Shivakumar"
-
-                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
-
-                        git add spring-boot-app-manifests/deployment.yml
-                        git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
-                    '''
+            agent {
+                docker {
+                    image 'shivakumarchincholi/maven-sample-docker-agent:v5'
+                    args '-v /var/run/docker.sock:/var/run/docker.sock'
                 }
+            }
+            steps {
+                sh '''
+                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
+                      java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                '''
             }
         }
 
-    } // stages
+        stage('Deploy to Kubernetes') {
+            agent {
+                docker {
+                    image 'shivakumarchincholi/maven-sample-docker-agent:v5'
+                    args '-v /var/run/docker.sock:/var/run/docker.sock'
+                }
+            }
+            steps {
+                sh '''
+                    kubectl apply -f java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                '''
+            }
+        }
+    }
 }
