--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,73 +1,82 @@
 pipeline {
-    agent any
+    agent {
+        docker {
+            image 'shivakumarchincholi/maven-sample-docker-agent:v6'
+            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+        }
+    }
+
+    environment {
+        SONAR_URL = "http://13.126.40.168:9000"
+        DOCKERHUB_CREDS = credentials('docker-cred')
+    }
 
     stages {
 
-        stage('Build and Test') {
-            agent {
-                docker {
-                    image 'shivakumarchincholi/maven-sample-docker-agent:v6'
-                    args '-v /var/run/docker.sock:/var/run/docker.sock'
-                }
-            }
+        stage('Checkout') {
             steps {
-                sh 'mvn clean package -DskipTests'
+                git branch: 'main', url: 'https://github.com/shivakumarchincholi/Jenkins-Zero-To-Hero.git'
             }
         }
 
-        stage('Static Code Analysis') {
-            agent {
-                docker {
-                    image 'shivakumarchincholi/maven-sample-docker-agent:v6'
-                    args '-v /var/run/docker.sock:/var/run/docker.sock'
-                }
-            }
-            steps {
-                sh 'mvn sonar:sonar -Dsonar.projectKey=my-app'
-            }
-        }
-
-        stage('Build Docker Image') {
-            agent {
-                docker {
-                    image 'shivakumarchincholi/maven-sample-docker-agent:v6'
-                    args '-v /var/run/docker.sock:/var/run/docker.sock'
-                }
-            }
+        stage('Build & Test') {
             steps {
                 sh '''
-                    docker build -t shivakumarchincholi/spring-boot-app:${BUILD_NUMBER} .
-                    docker push shivakumarchincholi/spring-boot-app:${BUILD_NUMBER}
+                    cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                    mvn clean package -DskipTests
                 '''
             }
         }
 
-        stage('Update Deployment File') {
-            agent {
-                docker {
-                    image 'shivakumarchincholi/maven-sample-docker-agent:v6'
-                    args '-v /var/run/docker.sock:/var/run/docker.sock'
-                }
-            }
+        stage('SonarQube Analysis') {
             steps {
-                sh '''
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
-                      java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                '''
+                withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+                    sh '''
+                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                        mvn sonar:sonar \
+                          -Dsonar.login=$SONAR_AUTH_TOKEN \
+                          -Dsonar.host.url=${SONAR_URL}
+                    '''
+                }
             }
         }
 
-        stage('Deploy to Kubernetes') {
-            agent {
-                docker {
-                    image 'shivakumarchincholi/maven-sample-docker-agent:v6'
-                    args '-v /var/run/docker.sock:/var/run/docker.sock'
-                }
+        stage('Build & Push Docker Image') {
+            environment {
+                DOCKER_IMAGE = "shivakumarchincholi/ultimate-cicd:${BUILD_NUMBER}"
             }
             steps {
-                sh '''
-                    kubectl apply -f java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                '''
+                script {
+                    sh '''
+                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                        docker build -t ${DOCKER_IMAGE} .
+                    '''
+                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
+                        sh "docker push ${DOCKER_IMAGE}"
+                    }
+                }
+            }
+        }
+
+        stage('Update Deployment YAML') {
+            environment {
+                GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
+                GIT_USER_NAME = "Shivakumarchincholi"
+            }
+            steps {
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh '''
+                        git config user.email "schincholi08@gmail.com"
+                        git config user.name "Shivakumar"
+
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
+                        java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+
+                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                        git commit -m "Update image version ${BUILD_NUMBER}"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    '''
+                }
             }
         }
     }
