--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,8 +1,9 @@
 pipeline {
+
     agent {
         docker {
             image 'shivakumarchincholi/maven-sample-docker-agent:v6'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+            args "--user root -v /var/run/docker.sock:/var/run/docker.sock -v ${WORKSPACE}:${WORKSPACE}"
         }
     }
 
@@ -15,28 +16,30 @@ pipeline {
 
         stage('Checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/shivakumarchincholi/Jenkins-Zero-To-Hero.git'
+                dir("${WORKSPACE}") {
+                    git branch: 'main', url: 'https://github.com/shivakumarchincholi/Jenkins-Zero-To-Hero.git'
+                }
             }
         }
 
         stage('Build & Test') {
             steps {
-                sh '''
-                    cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                sh """
+                    cd ${WORKSPACE}/java-maven-sonar-argocd-helm-k8s/spring-boot-app
                     mvn clean package -DskipTests
-                '''
+                """
             }
         }
 
         stage('SonarQube Analysis') {
             steps {
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-                    sh '''
-                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                    sh """
+                        cd ${WORKSPACE}/java-maven-sonar-argocd-helm-k8s/spring-boot-app
                         mvn sonar:sonar \
                           -Dsonar.login=$SONAR_AUTH_TOKEN \
                           -Dsonar.host.url=${SONAR_URL}
-                    '''
+                    """
                 }
             }
         }
@@ -47,11 +50,12 @@ pipeline {
             }
             steps {
                 script {
-                    sh '''
-                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                    sh """
+                        cd ${WORKSPACE}/java-maven-sonar-argocd-helm-k8s/spring-boot-app
                         docker build -t ${DOCKER_IMAGE} .
-                    '''
-                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
+                    """
+
+                    docker.withRegistry("https://index.docker.io/v1/", "docker-cred") {
                         sh "docker push ${DOCKER_IMAGE}"
                     }
                 }
@@ -65,7 +69,10 @@ pipeline {
             }
             steps {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                    sh '''
+
+                    sh """
+                        cd ${WORKSPACE}
+
                         git config user.email "schincholi08@gmail.com"
                         git config user.name "Shivakumar"
 
@@ -73,9 +80,9 @@ pipeline {
                         java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
 
                         git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                        git commit -m "Update image version ${BUILD_NUMBER}"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                    '''
+                        git commit -m "Updated image version ${BUILD_NUMBER}"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
+                    """
                 }
             }
         }
