--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,9 +1,8 @@
 pipeline {
-
     agent {
         docker {
             image 'shivakumarchincholi/maven-sample-docker-agent:v6'
-            args "--user root -v /var/run/docker.sock:/var/run/docker.sock -v ${WORKSPACE}:${WORKSPACE}"
+            args '--user root -v /var/run/docker.sock:/var/run/docker.sock -v $WORKSPACE:$WORKSPACE -w $WORKSPACE'
         }
     }
 
@@ -16,30 +15,28 @@ pipeline {
 
         stage('Checkout') {
             steps {
-                dir("${WORKSPACE}") {
-                    git branch: 'main', url: 'https://github.com/shivakumarchincholi/Jenkins-Zero-To-Hero.git'
-                }
+                git branch: 'main', url: 'https://github.com/shivakumarchincholi/Jenkins-Zero-To-Hero.git'
             }
         }
 
         stage('Build & Test') {
             steps {
-                sh """
-                    cd ${WORKSPACE}/java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                sh '''
+                    cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
                     mvn clean package -DskipTests
-                """
+                '''
             }
         }
 
         stage('SonarQube Analysis') {
             steps {
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-                    sh """
-                        cd ${WORKSPACE}/java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                    sh '''
+                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
                         mvn sonar:sonar \
                           -Dsonar.login=$SONAR_AUTH_TOKEN \
                           -Dsonar.host.url=${SONAR_URL}
-                    """
+                    '''
                 }
             }
         }
@@ -50,12 +47,11 @@ pipeline {
             }
             steps {
                 script {
-                    sh """
-                        cd ${WORKSPACE}/java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                    sh '''
+                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
                         docker build -t ${DOCKER_IMAGE} .
-                    """
-
-                    docker.withRegistry("https://index.docker.io/v1/", "docker-cred") {
+                    '''
+                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
                         sh "docker push ${DOCKER_IMAGE}"
                     }
                 }
@@ -68,11 +64,11 @@ pipeline {
                 GIT_USER_NAME = "Shivakumarchincholi"
             }
             steps {
+                // Ensure Git repo is available in workspace
+                checkout scm
+
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-
-                    sh """
-                        cd ${WORKSPACE}
-
+                    sh '''
                         git config user.email "schincholi08@gmail.com"
                         git config user.name "Shivakumar"
 
@@ -80,9 +76,9 @@ pipeline {
                         java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
 
                         git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                        git commit -m "Updated image version ${BUILD_NUMBER}"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
-                    """
+                        git commit -m "Update image version ${BUILD_NUMBER}"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    '''
                 }
             }
         }
