Update JenkinsFile to include workspace volume
Added workspace volume and working directory to Docker args.

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         docker {
             image 'shivakumarchincholi/maven-sample-docker-agent:v6'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+            args '--user root -v /var/run/docker.sock:/var/run/docker.sock -v $WORKSPACE:$WORKSPACE -w $WORKSPACE'
         }
     }
 
@@ -67,17 +67,6 @@ pipeline {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     // Perform git checkout inside container for this stage only
                     sh '''
-                        # Ensure we are in the workspace
-                        pwd
-                        ls -la
-
-                        # If .git doesn't exist, do a shallow clone
-                        if [ ! -d ".git" ]; then
-                            echo "Cloning repository inside container..."
-                            git clone --depth 1 https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git .
-                        fi
-
-                        # Configure Git
                         git config user.email "schincholi08@gmail.com"
                         git config user.name "Shivakumar"
 
