--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         docker {
             image 'shivakumarchincholi/maven-sample-docker-agent:v6'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock -v $WORKSPACE:$WORKSPACE -w $WORKSPACE'
+            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
         }
     }
 
@@ -67,6 +67,13 @@ pipeline {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     // Perform git checkout inside container for this stage only
                     sh '''
+                        # Create a temporary directory inside container
+                        TEMP_DIR=$(mktemp -d)
+                        cd $TEMP_DIR
+
+                        # Clone repository (shallow clone)
+                        git clone --depth 1 https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git .
+
                         git config user.email "schincholi08@gmail.com"
                         git config user.name "Shivakumar"
 
